# easysound

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py  scene_presets.py
backend/app/providers/: audio_provider.py  pitch_provider.py  provider_factory.py
backend/app/services/: audio_metadata.py  audio_pipeline.py  job_queue.py  process_utils.py  task_store.py  upload_payload.py
backend/tests/: test_scene_presets.py  test_upload_payload.py
public/: app.js  history-detail.html  history-detail.js  history.html  history.js  index.html  styles.css
src/: server.js
src/config/: scene-presets.js
src/lib/: audio-metadata.js  audio-pipeline.js  constants.js  fs-utils.js  http.js  job-queue.js  process-utils.js  task-payload.js  task-store.js
src/providers/: ffmpeg-audio-provider.js  index.js  pitch-provider.js
tests/: scene-presets.test.js  task-payload.test.js
