[project]
name = "easysound-backend"
version = "0.1.0"
description = "FastAPI backend for EasySound"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "pydantic>=2.8,<3.0",
  "numpy>=1.26,<3.0",
  "librosa>=0.10,<1.0",
  "pretty_midi>=0.2.10,<1.0"
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
